Processo e introdução criados

--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -4,13 +4,15 @@
   software, os requisitos serão constantemente sendo aprimorado ao longo da disciplina de Requisitos de Software na Universidade
   de Brasília $-$ UnB.
 
-  Este relatório está dividido em algumas partes excenciais para a boa realização do mesmo, na qual temos a parte de processos de
-  Engenharia de Requisitos (ER), criado com base no SAFe (Scaled Agile Framework) e apoiado em um modelo de maturidade chamado MPS.Br,
-  ambos serão detalhados mais a frente, temos um contexto do cliente e da empresa que iremos trabalhar, além do planejamento, abordagem,
-  elicitação, gereciamento e a escolha da ferramenta que iremos utilizar.
+  Este relatório está dividido em algumas partes excenciais para a boa realização do mesmo, na qual temos a parte de entendimento do negocio
+  processos de Engenharia de Requisitos (ER), criado com base no SAFe (Scaled Agile Framework) e apoiado em um modelo de maturidade chamado
+  MPS.Br, na qual será detalhado a execução do mesmo, o registro da experiência da execução das técnicas de elicitação de requisitos, os
+  registros dos requisitos e sua rastreabilidade, um detalhe da primeira iteração do produto de software e sua solução e um relato da
+  experiencia da execução do trabalho e da disciplina.
 
   O cliente contemplado nesse projeto é uma empresa junior de geologia da UnB, e o objetivo principal das diversas atividades que a
   equipe de engenharia de software irá desenvolver está explicado nesse relatório de modo a alcançar o objetivo final que é produzir
   um produto de software de qualidade que agregue valor ao cliente atendendo todas as suas necessidades, essas atividades estão de
   acordo com os 5 pilares da Engenharia de Requisitos que são: Elicitação, análise e negociação, documentaçào, verificação e validação
   e gerência de requisitos.
+
