--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,10 @@
 \textual
 
 \input{editaveis/introducao}
+\input{editaveis/visao}
+\input{editaveis/processo}
+\input{editaveis/gerencia}
+\input{editaveis/conclusao}
 
 \postextual
 
