visao e nives de portifolio e programa

--- a/editaveis/conclusao.tex
+++ b/editaveis/conclusao.tex
@@ -1,1 +1,10 @@
 \chapter{Conclusão}
+
+\section{Experiência de Execução do Trabalho}
+
+  Em construção\ldots
+
+\section{Experiência da Disciplina}
+
+  Em construção\ldots
+
