--- a/main.tex
+++ b/main.tex
@@ -19,11 +19,13 @@
 \input{editaveis/visao}
 \input{editaveis/processo}
 \input{editaveis/gerencia}
+\input{editaveis/iteracao}
 \input{editaveis/conclusao}
 
 \postextual
 
 \bibliography{bibliografia}
+\input{editaveis/anexo}
 
 \end{document}
 
